--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,4 +1,4 @@
-* {
+ {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -10,6 +10,7 @@ body {
 
 header {
   display: flex;
+  justify-content: space-between;
   padding: 20px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
@@ -47,32 +48,53 @@ nav ul li {
   margin-left: 20px;
 }
 
+#container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  width: 100%;
+}
+
 .content {
   display: flex;
-  flex-wrap: wrap;
   width: 75%;
-  display: inline-block;
-  margin-left: 20px;
+  margin: 0 auto;
+  padding: 10px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 article {
   display: flex;
+  flex-direction: column;
   margin-right: 20px;
   padding: 20px;
+  line-height: 1.8em;
   clear: both;
   float: right;
-  width: 20%;
+  width: 25%;
   height: 100%;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   background-color: #2589bd;
+  color: #ffffff;
 }
 
-article {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
+.work {
+  display: flex;
+  flex-direction: column;
+}
+
+.about {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  line-height: 1.6em;
+  width: 75%;
+}
+
+.work-project {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
   color: #ffffff;
 }
 
