--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,23 +1,15 @@
 * {
   box-sizing: border-box;
 }
+
 html,
 body {
   width: 100%;
   height: 100%;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   overflow-x: hidden;
 }
-/*
-body, html {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    font-family:Arial, Helvetica, sans-serif;
- 
-}
-*/
 
 /* Hero img of me */
 
@@ -39,29 +31,33 @@ nav {
   padding-left: 8%;
   padding-right: 8%;
 }
+
 .logo {
-  color: #be97dd;
+  color: #3498db; /* Updated to a blue color */
   font-size: 35px;
   letter-spacing: 1px;
   cursor: pointer;
 }
+
 nav ul li {
   list-style-type: none;
   display: inline-block;
   padding: 10px 25px;
 }
+
 nav ul li a {
-  color: white;
+  color: #ffffff; /* Updated to white */
   text-decoration: none;
   font-weight: bold;
   text-transform: capitalize;
 }
+
 nav ul li a:hover {
-  color: #d4543b;
+  color: #e74c3c; /* Updated to a red color */
   transition: 0.4s;
 }
 
-/* Content section/my name etc  */
+/* Content section/my name etc */
 
 .content {
   margin-top: 17%;
@@ -70,18 +66,21 @@ nav ul li a:hover {
   left: 8%;
   transform: translateY(-50%);
 }
+
 h1 {
-  color: white;
+  color: #ffffff; /* Updated to white */
   margin: 20px 0px 20px;
   font-size: 75px;
 }
+
 h3 {
-  color: white;
+  color: #ffffff; /* Updated to white */
   font-size: 25px;
   margin-bottom: 50px;
 }
+
 h4 {
-  color: white;
+  color: #ffffff; /* Updated to white */
   letter-spacing: 2px;
   font-size: 20px;
   margin-top: 50px;
@@ -90,67 +89,42 @@ h4 {
 /* Contact me button */
 
 .button {
-  background-color: #8739dc;
-  color: white;
+  background-color: #e74c3c; /* Updated to a red color */
+  color: #ffffff; /* Updated to white */
   text-decoration: none;
   border: 2px solid transparent;
   font-weight: bold;
   padding: 10px 25px;
   border-radius: 30px;
 }
+
 .button:active {
   transform: translate(0px, 5px);
   -webkit-transform: translate(0px, 5px);
   box-shadow: 0px 1px 0px 0px;
 }
+
 .button:hover {
-  background-color: purple;
+  background-color: #3498db; /* Updated to a blue color */
 }
 
 /* About section/short description of me */
 
 .About {
   padding: 100px 0px;
-  background-color: black;
+  background-color: #333; /* Updated to a dark gray color */
 }
+
 .About img {
   height: auto;
   width: 430px;
   border: 5px;
   border-radius: 250px;
 }
+
 .About-text {
   width: 500px;
-  color: white;
-}
-.main {
-  width: 1130px;
-  max-width: 95%;
-  display: flex;
-  margin: 0 auto;
-  align-items: center;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-.About-text h2 {
-  color: white;
-  font-size: 75px;
-  text-transform: capitalize;
-  margin-top: 20px;
-}
-.About-text h5 {
-  color: white;
-  letter-spacing: 2px;
-  font-size: 22px;
-  margin-bottom: 25px;
-  text-transform: capitalize;
-}
-.About-text p {
-  color: #f7d1c9;
-  letter-spacing: 1px;
-  line-height: 27px;
-  font-size: 18px;
-  margin-bottom: 45px;
+  color: #ffffff; /* Updated to white */
 }
 
 /* Project section/imgs/links */
@@ -161,9 +135,9 @@ h4 {
   align-items: center;
   gap: 2.5rem;
   margin-top: 5rem;
-  background-color: rgb(3, 3, 3);
-  background-size: cover;
+  background-color: #111; /* Updated to a dark background color */
 }
+
 .Row {
   width: 500px;
   max-width: 95%;
@@ -180,49 +154,48 @@ h4 {
   cursor: pointer;
   bottom: 10px;
   top: 1px;
-  color: white;
+  color: #ffffff; /* Updated to white */
 }
+
 .Row img {
   width: 100%;
   border-radius: 8px;
   display: block;
   transition: transform 0.5s;
-  border: 10px solid #b4b0af;
+  border: 10px solid #3498db; /* Updated to a blue color */
 }
+
 .Row:hover {
   transform: scale(1.2, 1.2);
 }
+
 .layer {
   width: 50%;
   height: 0;
-  /* background: black;*/
   position: absolute;
   border-radius: 8px;
-  /*left: 7rem;*/
   overflow: visible;
   display: flex;
   flex-direction: column;
-  /*align-items:left ;*/
   transition: height 0.5s;
-  /*background-color: #bf341f;*/
-  color: rgb(203, 230, 0);
+  color: #cbff00; /* Updated to a bright green color */
   text-decoration: none;
   border: 7px solid transparent;
   font-weight: bold;
   padding: 25px 25px;
-  /*bottom: 20px;*/
 }
+
 .layer h5 {
-  /*font-size: 20px;*/
   font-weight: 600;
   margin-bottom: 15px;
   text-align: left;
 }
+
 .layer i {
-  color: #be97dd;
+  color: #3498db; /* Updated to a blue color */
   margin-top: 20px;
   font-size: 20px;
-  background-color: black;
+  background-color: #000;
   width: 60px;
   height: 60px;
   display: flex;
@@ -230,12 +203,14 @@ h4 {
   justify-content: center;
   border-radius: 50px;
 }
+
 .Projects {
-  background-color: black;
+  background-color: #111; /* Updated to a dark background color */
   padding-top: 100px;
 }
+
 .main-text {
-  color: white;
+  color: #ffffff; /* Updated to white */
   width: 1130px;
   max-width: 95%;
   display: flex;
@@ -245,19 +220,21 @@ h4 {
   margin-top: 50px;
   font-size: 100px;
 }
+
 .main-text span {
-  color: #d29d9d;
+  color: #d29d9d; /* Updated to a lighter gray color */
 }
 
 /* Contact section/logos */
 
 .contact {
-  background: blue;
+  background: #3498db; /* Updated to a blue color */
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
   gap: 2.5rem;
 }
+
 .contact-text h2 {
   align-items: center;
   justify-content: space-around;
@@ -267,26 +244,30 @@ h4 {
   display: flex;
   text-decoration: underline;
 }
+
 .contact-text i {
   align-items: center;
   justify-content: space-around;
   margin-top: 20px;
   display: flex;
 }
+
 .list {
   margin-bottom: 2.8rem;
   list-style-type: none;
 }
+
 .list ul li {
   list-style-type: none;
   display: inline-block;
   padding: 10px 25px;
   margin-bottom: 20px;
 }
+
 .list ul li a {
   display: contents;
   width: 320px;
-  color: rgb(6, 6, 11);
+  color: #06060b; /* Updated to a dark text color */
   font-size: 35px;
   transition: all, 1s ease;
   text-decoration: none;
@@ -297,17 +278,19 @@ h4 {
 /* Buttons for contact section */
 
 .buttons {
-  background-color: white;
-  color: white;
+  background-color: #ffffff; /* Updated to white */
+  color: #ffffff; /* Updated to white */
   text-decoration: none;
   border: 2px solid transparent;
   font-weight: normal;
   padding: 10px 30px;
   border-radius: 15px;
 }
+
 .buttons:hover {
-  color: blue;
+  color: #3498db; /* Updated to a blue color */
 }
+
 .bottom-right {
   position: absolute;
   bottom: 8px;
@@ -321,6 +304,7 @@ h4 {
     width: 50%;
   }
 }
+
 @media screen and (max-width: 768px) {
   .layer {
     width: 100%;
